--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
-    <link rel="stylesheet" href="defaultStyle.css">
+    <link rel="stylesheet" href="../_layouts/defaultStyle.css">
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -20,10 +20,10 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     </header>
     <nav class="menu-bar">
-      <a href="../index.md">Home</a>
+      <a href="../">Home</a>
       <a href="https://github.com/zzou21/Mission2000NPSDatabaseInterface">View on GitHub</a>
-      <a href="../about-page.md">About</a>
-      <a href="../searchTool.html">Go to Interface</a>
+      <a href="../about/">About</a>
+      <a href="../search-interface/">Go to Interface</a>
     </nav>
 
     <main id="content" class="main-content" role="main">
