--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="../assets/css/defaultStyle.css">
+    <link rel="stylesheet" href="/assets/css/defaultStyle.css">
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -18,10 +18,10 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     </header>
     <nav class="menu-bar">
-      <a href="../">Home</a>
+      <a href="/">Home</a>
       <a href="https://github.com/zzou21/Mission2000NPSDatabaseInterface">View on GitHub</a>
-      <a href="../about/">About</a>
-      <a href="../search-interface/">Go to Interface</a>
+      <a href="/about/">About</a>
+      <a href="/search-interface/">Go to Interface</a>
     </nav>
 
     <main id="content" class="main-content" role="main">
