--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="/assets/css/defaultStyle.css">
+    <link rel="stylesheet" href="{{ '/assets/css/defaultStyle.css' | relative_url }}">
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -20,8 +20,8 @@
     <nav class="menu-bar">
       <a href="{{ '/' | relative_url }}">Home</a>
       <a href="https://github.com/zzou21/Mission2000NPSDatabaseInterface">View on GitHub</a>
-      <a href="{{ '/about.html' | relative_url }}">About</a>
-      <a href="{{ '/search-interface.html' | relative_url }}">Go to Interface</a>
+      <a href="{{ '/about' | relative_url }}">About</a>
+      <a href="{{ '/search-interface | relative_url }}">Go to Interface</a>
     </nav>
     
 
