--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <a href="{{ '/' | relative_url }}">Home</a>
       <a href="https://github.com/zzou21/Mission2000NPSDatabaseInterface">View on GitHub</a>
       <a href="{{ '/about' | relative_url }}">About</a>
-      <a href="{{ '/search-interface | relative_url }}">Go to Interface</a>
+      <a href="{{ '/search-interface' | relative_url }}">Go to Interface</a>
     </nav>
     
 
