--- a/defaultStyle.css
+++ b/defaultStyle.css
@@ -31,9 +31,16 @@
   .btn:hover {
     background-color: #0056b3;
   }
-  
+
 .btn-container {
   text-align: center;
 }
-  
+
+.instructions {
+  font-size: 12px;
+  color: black;
+  line-height: 1.6;
+  text-align: justify;
+  border-radius: 5px;
+}
   
