--- a/defaultStyle.css
+++ b/defaultStyle.css
@@ -1,3 +1,4 @@
+/*For default.html: */
 .menu-bar {
     display: flex;
     justify-content: center;
@@ -17,6 +18,7 @@
     text-decoration: underline;
   }
 
+/*For index.md: */
 .btn {
   display: inline-block;
   padding: 10px 20px;
@@ -36,11 +38,11 @@
   text-align: center;
 }
 
+/*For searchTool.html: */
 .instructions {
-  font-size: 12px;
+  font-size: 14px;
   color: black;
   line-height: 1.6;
   text-align: justify;
   border-radius: 5px;
 }
-  
