--- a/searchPage/searchToolPage.css
+++ b/searchPage/searchToolPage.css
@@ -1,16 +1,24 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+}
+
+h4 {
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+br {
+    line-height: 0.2;
 }
 
 #results {
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .result-item {
     border: 1px solid #ccc;
-    padding: 3px;
-    margin-bottom: 3px;
+    padding: 2px;
+    margin-bottom: 2px;
 }
 
 .caret {
@@ -22,7 +30,7 @@ body {
 
 .year-caret {
     margin-top: 1em;
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 .person-details {
@@ -37,4 +45,9 @@ body {
   line-height: 1.6;
   text-align: justify;
   border-radius: 5px;
+}
+
+hr {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
